header alignment fixed

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -49,12 +49,16 @@ p {
     margin-bottom: 20px
 }
 
-.boxed {
+.boxed  {
   border: 2px solid #E1933D;
-  margin: 0px;
+  border-radius: 4px;
+  /* margin: 0;
+  padding: 0; */
   font-color; #E1933D;
 }
-
+.aligned{
+  margin-top: 2px;
+}
 
 
 
